2010-08-10 Caolán McNamara <cmc at OOo>:
	* hun#3022860 fix remove duplicate code

2010-07-17 Caolán McNamara <cmc at OOo>:
	* remove ununsed get_default_enc and avoid potential misrecognition of
	three letter language ids
	* normalize encoding names before lookup

2010-07-05 Caolán McNamara <cmc at OOo>:
	* hun#2286060 add Hangul syllables to unicode tables

2010-06-26 Caolán McNamara <cmc at OOo>:
	* moz#571728 keep new[]/delete[] wrappers in sync for embedded in moz
	case

2010-06-13 Caolán McNamara <cmc at OOo>:
	* moz#571728 keep new[]/delete[] wrappers in sync for embedded in moz
	case

2010-06-02 Caolán McNamara <cmc at OOo>:
	* moz#569611 compile cleanly under win64

2010-05-22 Caolán McNamara <cmc at OOo>:
	* moz#525581 apply mozilla's current preferred get_current_cs impl

2010-05-17 Németh László <nemeth at OOo>:
	* affixmgr.cxx: fix bad limitation of parenthesized flags at
	  COMPOUNDRULEs. Windows crash reported by Ruud Baars and Simon Brouwer.

2010-05-05 Caolán McNamara <cmc at OOo>:
	* rhbz#589326 malloc of int that should have been of char**
	* hun#2997388 fix ironic misspellings

2010-04-28 Caolán McNamara <cmc at OOo>:
	* moz#550942 get_xml_list doesn't handle failure from get_xml_par

2010-04-27 Caolán McNamara <cmc at OOo>:
	* moz#465612 mozilla-specific code leaks
	* moz#430900 phone is dereferenced before oom check
	* moz#418348 ckey_utf alloc is used unchecked in SuggestMgr::badcharkey_utf
	* CID#1487 pointer "rl" dereferenced before NULL check
	* CID#1464 Returned without freeing storage "ptr"
	* CID#1459 Avoid duplicate strchr
	* CID#1443 Avoid any chance of dereferencing *slst
	* CID#1442 Unsafe to have a null morph
	* CID#1440 Avoid null filenames
	* CID#1302 Dereferencing NULL value "apostrophe"
	* CID#1441 Avoid deferencing null ppfx

2010-04-16 Caolán McNamara <cmc at OOo>:
	* hun#2344123 fix U)ncap in utf-8 locale
	* fix up hunspell text UI and lines wider than terminal

2010-04-15 Caolán McNamara <cmc at OOo>: