@@ -3481,8 +3481,12 @@ int  AffixMgr::parse_convtable(char * line, FileMgr * af, RepList ** rl, const c
            piece = mystrsep(&tp, 0);
         }
         if (!pattern || !pattern2) {
-             HUNSPELL_WARNING(stderr, "error: line %d: table is corrupt\n", af->getlinenum());
-             return 1;
+            if (pattern)
+                free(pattern);
+            if (pattern2)
+                free(pattern2);
+            HUNSPELL_WARNING(stderr, "error: line %d: table is corrupt\n", af->getlinenum());
+            return 1;
         }
         (*rl)->add(pattern, pattern2);
    }
